# investilearn

./: .pre-commit-config.yaml  DEV_QUICKREF.md  README.md  dashboard.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: conftest.py  test_data_fetcher.py  test_ratio_calculator.py  test_utils.py  test_visualizations.py
utils/: __init__.py  data_fetcher.py  ratio_calculator.py  visualizations.py
